# Calculator

./: .gitignore  README.md
Client/: CMakeLists.txt  main.cpp
Client/include/: ExpressionGenerator.h  utils.h
Client/source/: ExpressionGenerator.cpp
Server/: CMakeLists.txt  main.cpp
Server/include/: ExpressionManager.h
Server/source/: ExpressionManager.cpp
Server/tests/: CMakeLists.txt  test_ExpressionManager.cpp
